# chat-streamlit

./: Final_intents.json  README.md  intents_last_final.json  merged_file.csv  merged_file_final.csv  requirements.txt  streamlit_app.py
Location_web_scraping/: checks.py  data_handler.py  nsw_pharmacy.py  scraper.py  yellowpages_pharmacy.py
notebooks/: 1_web-scraping-nsw-pharmacy.ipynb  questions.csv  questions.ipynb
symptom_checker/: apiaccess.py  chat.py  conversation.py  pyproject.toml
web_scraping/: OHSC_EDA.ipynb  OSHC.xlsx  code_merge.py  faq_answers_penny.json  faq_bupa.py  faq_med.py  med-bupa.xlsx  medibank_final.csv  questions.ipynb  test_medibank_final.py
